--- a/remoteClient.html
+++ b/remoteClient.html
@@ -5,7 +5,7 @@
 </head>
 <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 <script src="./discordPureJS.js"></script>
-<script src="./MregalBotDiscord.js"></script>
+<script src="./bot.js"></script>
 <body>
 
 <p>Newest Message: <span></span></p>
